--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <title>Login</title>
 </head>
 <body>
-  
-  
+  <main>
+    <div class="container">
+      <img src="assets/Credit card-bro.svg" alt="">
+      <div class="action">
+        <h1>O melhor banco para transerir e receber dinheiro</h1>
+        <button>Criar uma conta</button>
+        <p>Já tem uma conta? <a href=""></a>Login</p>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
