--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
       <img src="assets/Credit card-bro.svg" alt="">
       <div class="action">
         <h1>O melhor banco para transerir e receber dinheiro</h1>
-        <button>Criar uma conta</button>
-        <p>Já tem uma conta? <a href="">Login</a></p>
+        <button onclick="redirecionar(0)">Criar uma conta</button>
+        <p>Já tem uma conta? <a onclick="redirecionar(1)">Login</a></p>
       </div>
     </div>
   </main>
+    
+  <script src="./js/dashboard.js" defer></script>
 </body>
 </html>
