página de registro totalmente feita

--- a/html/register.html
+++ b/html/register.html
@@ -12,37 +12,36 @@
     <div class="container">
       <div class="card-register">
         <form action="">
-          <img src="../assets/Credit card-rafiki.svg" alt="">
           <h3>Crie sua conta</h3>
           <div class="fieldgroup">
             <div class="fieldset">
-              <label for="">Nome completo</label>
-              <input type="text" name="" id="" placeholder="Seu nome aqui">
+              <label for="nome">Nome completo</label>
+              <input type="text" name="nome" id="nome" placeholder="Seu nome aqui">
             </div>
             <div class="fieldset">
-              <label for="">Data de nascimento</label>
-              <input type="text" name="" id="" placeholder="DD/MM/AAAA">
+              <label for="birth">Data de nascimento</label>
+              <input type="text" name="birth" id="birth" placeholder="DD/MM/AAAA">
             </div>
             <div class="fieldset">
-              <label for="">CPF</label>
-              <input type="text" name="" id="" placeholder="Sem pontos e traços">
+              <label for="cpf">CPF</label>
+              <input type="text" name="cpf" id="cpf" placeholder="Sem pontos e traços">
             </div>
             <div class="fieldset">
-              <label for="">Email</label>
-              <input type="email" name="" id="" placeholder="seu@email.com">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" placeholder="seu@email.com">
             </div>
             <div class="fieldset">
-              <label for="">Senha</label>
-              <input type="password" name="" id="" placeholder="No mínimo 8 carácteres">
+              <label for="senha">Senha</label>
+              <input type="password" name="email" id="senha" placeholder="No mínimo 8 carácteres">
             </div>
             <div class="botao-form">
-              <button id="enviar-cadastro">Criar conta</button>
+              <button id="enviar-cadastro" onclick="">Criar conta</button>
             </div>
           </div>
         </form>
       </div>
     </div>
   </main>
-  <script src="../js/register.js"></script>
+  <script src="../js/register.js" defer></script>
 </body>
 </html>
