adição de links para navegação entre forms

--- a/html/login.html
+++ b/html/login.html
@@ -27,9 +27,11 @@
             </div>
           </div>
         </form>
+        <p>Não tem conta ainda? <a onclick="redirecionar(2)">Cadastre-se</a></p>
       </div>
     </div>
   </main>
   <script src="../js/login.js" defer></script>
+  <script src="../js/redirect.js" defer></script>
 </body>
 </html>
