--- a/html/register.html
+++ b/html/register.html
@@ -40,8 +40,9 @@
           </div>
         </form>
       </div>
+      <p>Já tem conta? <a onclick="redirecionar(3)" class="login">Login</a></p>
     </div>
   </main>
-  <script src="../js/register.js" defer></script>
+  <script src="../js/redirect.js" defer></script>
 </body>
 </html>
