--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   </main>
     
   <script src="./js/dashboard.js" defer></script>
+  <script src="../js/redirect.js" defer></script>
 </body>
 </html>
