Removendo defer do index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </main>
     
-  <script src="./js/dashboard.js" defer></script>
-  <script src="../js/redirect.js" defer></script>
+  <script src="./js/dashboard.js"></script>
+  <script src="../js/redirect.js"></script>
 </body>
 </html>
